[FIX]Submenu overflow for css vertical menu in box
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/11.x@47325 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/greenvalley.css
+++ b/styles/greenvalley.css
@@ -450,6 +450,10 @@ h3.box-title .moduletitle em {
     overflow: hidden;
 }
 
+.box-menu .box ol li, .box ul li  {
+    overflow: visible;
+}
+
 .box-switch_lang {
     text-align: center !important;
 }
@@ -469,8 +473,9 @@ h3.box-title .moduletitle em {
     margin: 10px 20px;
 }
 
-.box .pass {
+.box .pass, .box .user {
     text-align: center;
+    margin: 2px 0;
 }
 
 .box select {
@@ -790,4 +795,261 @@ select#viewSwitcher {
 .infiniteCarousel br {display: none}
 
 
+/***** My custom tags *****/
+
+/** Design **/
+
+.menu_hebrew {
+    letter-spacing:0.1em;
+    font:tahoma;
+}
+/** Home Div **/
+
+#homefloat_right {
+	float: right;
+	width: 48%;
+    font-size: 0.9em;
+}
+
+#homefloat_right br {
+	display: none;
+}
+
+#homefloat_right h2 {
+    margin-top: 0;
+}
+
+#homefloat_left {
+	float: left;
+	width: 320px;
+	height: 240px;
+}
+
+/** Home Pictures Frame **/
+#home_pict {
+	width: 700px;
+	height:	170px;
+	margin: 0 auto;
+    padding-top: 3.5em;
+}
+
+#home_pictmask {
+	position:relative;
+	left:62px;
+	z-index: 100;
+}
+
+#home_pict_box {
+    text-align: center;
+	position:relative;
+	top:-132px;
+	left:11px;
+	background: #000;
+}
+
+#home_pict img {
+	margin-left: 51px;
+	margin-right: 51px;
+}
+/** Trackerfilter **/
+
+.trackerfilter {
+    background: url('greenvalley/menubar-wood2.jpg') 100% 50% no-repeat;
+}
+
+.trackerfilter table {
+    border: none;
+}
+
+.trackerfilter table.normal tr:first-child {
+    background: none !important;
+}
+
+.trackerfilter table.normal tr:nth-child(2n+1) {
+    background: none !important;}
+
+.trackerfilter table td {
+    vertical-align: middle;
+    font-size: 1.1em;
+    color: #fff;
+}
+
+.trackerfilter select {
+    margin: 0 10px;
+    color: #cda256;
+    background-color : #42281d;
+    height: 20px;
+    font-size: 1em;
+    border: none;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 3px rgba(0, 0, 0, 0.2) inset;
+    -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 3px rgba(0, 0, 0, 0.2) inset;
+    -o-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 3px rgba(0, 0, 0, 0.2) inset;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 3px rgba(0, 0, 0, 0.2) inset;
+    -webkit-background-clip: padding-box;
+    -webkit-transition: all 0.7s ease-out 0s;  /* Saf3.2+, Chrome */
+    -moz-transition: all 0.7s ease-out 0s;  /* FF4+ */
+    -ms-transition: all 0.7s ease-out 0s;  /* IE10? */
+    -o-transition: all 0.7s ease-out 0s;  /* Opera 10.5+ */
+    transition: all 0.7s ease-out 0s;
+}
+
+/** Phonebook **/
+.phonebook {
+    width: 680px;
+    margin: 1em auto;
+    background: url('greenvalley/phonebook_ltr.jpg') no-repeat;
+    min-height: 800px;
+}
+
+.phonebook .normal {
+    width: 680px;
+    border: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.phonebook_listing {
+    width: 100%;
+}
+
+.phonebook_item {
+    float:left;
+    width: 100%;
+    margin: 1.33em auto 0 auto;
+    background: transparent !important;
+    font-size: 1em;
+}
+
+.phonebook_cell {
+    padding: 0 4px 0 10px;
+    width: 25%;
+    display:inline;
+    float: left;
+}
+
+.phonebook_tel {
+    padding: 0 4px 0 10px;
+    width: 15%;
+    display:inline;
+    float: left;
+}
+
+.phonebook_name {
+    font-weight: bold;
+    font-size: 120%;
+}
+
+.phonebook .mini {padding-top:0.6em;}
+.phonebook p {display:none;}
+
+/* Business tracker */
+.business_right {
+    float:right;
+    width:48%;
+}
+
+#business_left {
+    float:left;
+    width:45%;
+}
+
+.business_type {
+    position: relative;
+    top:14px;
+    right:15px;
+    color: #bbb;
+}
+
+.business_type a {
+    color: #777;
+    font-size:1.1em;
+}
+
+.business_card {
+    border: 1px dashed #f2e4ab;
+    margin:15px;
+    padding:4px;
+    background: #fff;
+    height:270px;
+}
+
+.business_header {
+    float:right;
+    height: 75px;
+}
+
+.business_header h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.6em;
+    font-weight: bold;
+    color: #E23996;
+    -ms-transform:scale(1,1.8); /* IE 9 */
+    -moz-transform:scale(1,1.8); /* Firefox */
+    -webkit-transform:scale(1,1.8); /* Safari and Chrome */
+    -o-transform:scale(1,1.8); /* Opera */
+    transform:scale(1,1.8);
+    letter-spacing: .1em;
+}
+
+.business_header h4 {
+    font-size: 1em;
+    margin-bottom: 0.4em;
+    margin-top: 0.7em;
+}
+
+.business_picture {
+    float:left;
+}
+
+.business_picture p {
+    margin:0;
+}
+
+.business_picture img {
+    position:relative;
+    top:2px;
+    left:2px;
+}
+
+.business_text {
+    height: 120px;
+    position:relative;
+    top: 1em;
+    padding-bottom: 4px;
+    overflow: hidden;
+    clear:both;
+    font-size: .96em;
+}
+
+.business_bottom {
+    padding: 4px 0;
+    border-top: #f2e4ab 1px dashed;
+    background: #fff;
+    font-size: 1.05em;
+}
+
+.business_bottom p {
+    margin:0;
+    font-size:0.9em;
+}
+
+.business_bottom_right {
+    float:right;
+    width:40%;
+}
+
+.business_bottom_left {
+    text-align:left !important;
+    float:left;
+    width:60%;
+}
+
+.business_clear {
+    clear:both;
+}
 /* End of File */
+
